--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
 
 <!--Stackoverflow solution-->
 <section id="projects">
+    <h1 class="main-heading">Projects</h1>
   <article class="d-flex justify-content-center">
         <div class="flip">
           <div class="card bg-dark text-white text-center" style="width: 600px;"> 
@@ -102,7 +103,9 @@
             <div class="back card-img-overlay"> 
               <div class="text-center"> 
                   <h5 class="card-title">Gateway Solutions</h5>
-                  <p class="card-text">This project is a reproduction of <em>Portal</em>, a 1st person puzzle-platform video game.</p>
+                  <p class="card-text">
+                    <a href="https://cjcmoney18.itch.io/gateway-solution"></a>
+                    This project is a reproduction of <em>Portal</em>, a 1st person puzzle-platform video game.</p>
                   <p class="card-text"><small class="text-muted">Coming soon</small></p>
               </div>
             </div>
