--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                   <p class="card-text">
                     <a href="https://cjcmoney18.itch.io/gateway-solution"></a>
                     This project is a reproduction of <em>Portal</em>, a 1st person puzzle-platform video game.</p>
-                  <p class="card-text"><small class="text-muted">Coming soon</small></p>
+                  <!--<p class="card-text"><small class="text-muted">Coming soon</small></p>-->
               </div>
             </div>
           </div>	 
