added text to game link

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
               <div class="text-center"> 
                   <h5 class="card-title">Gateway Solutions</h5>
                   <p class="card-text">
-                    <a href="https://cjcmoney18.itch.io/gateway-solution"></a>
+                    <a href="https://cjcmoney18.itch.io/gateway-solution">Click here to play Gateway Solutions</a>
                     This project is a reproduction of <em>Portal</em>, a 1st person puzzle-platform video game.</p>
                   <!--<p class="card-text"><small class="text-muted">Coming soon</small></p>-->
               </div>
