removed part of the game description

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
               <div class="text-center"> 
                   <h5 class="card-title">Gateway Solutions</h5>
                   <p class="card-text">
-                    This project is a reproduction of <em>Portal</em>, a 1st person puzzle-platform video game. The game takes place in the year of 3005, a time when humanity has expanded their reach beyond the solar system. You'll play as Amber O’Scully, an engineer on the Boundless, a space station orbiting Earth, waking up to find it in ruin, with the rest of the crew missing. Amber must work their way through the ship, piecing together what happened to the station, and solving puzzles to progress.</p>
+                    This project is a reproduction of <em>Portal</em>, a 1st person puzzle-platform video game.
                   <!--<p class="card-text"><small class="text-muted">Coming soon</small></p>-->
               </div>
             </div>
