added space and br for mobile view

--- a/index.html
+++ b/index.html
@@ -104,7 +104,9 @@
               <div class="text-center"> 
                   <h5 class="card-title">Gateway Solutions</h5>
                   <p class="card-text">
-                    This project is a reproduction of <em>Portal</em>, a 1st person puzzle-platform video game.
+                    This project is a reproduction of <em>Portal</em>.
+                    <br>
+                    A 1st person puzzle-platform video game.
                   <!--<p class="card-text"><small class="text-muted">Coming soon</small></p>-->
               </div>
             </div>
@@ -112,6 +114,7 @@
         </div>
     </article>
   </section>
+        <br>
         <div class="text-center">
             <a href="https://cjcmoney18.itch.io/gateway-solution">
                 <button class="btn btn-primary btn-md btn-spacing">Play</button>
