added  target="_blank" to open in a new tab

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
   </section>
         <br>
         <div class="text-center">
-            <a href="https://cjcmoney18.itch.io/gateway-solution">
+            <a href="https://cjcmoney18.itch.io/gateway-solution"  target="_blank">
                 <button class="btn btn-primary btn-md btn-spacing">Play</button>
             </a>
         </div>
