changed home link, changed profile picture

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
                   <!--insert site into home href-->
-                <a class="nav-link active" aria-current="page" href="https://cjcmoney18.github.io/Cooper/">Home</a>
+                <a class="nav-link active" aria-current="page" href="https://cjcmoney18.github.io/portfolio/">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#about">About</a>
@@ -64,11 +64,11 @@
     <!--intro heading-->
    <header>
     <div class="jumbotron mooning-bg">
-        <img src="img/JobPicc.jpg" alt="Cedric Cooper Profile Img" class="img-border">
+        <img src="img/ProfPic.jpg" alt="Cedric Cooper Profile Img" class="img-border">
         <h1 class="display-4">Hi, my name is Cedric Cooper</h1>
         <p class="lead">Junior Game Developer</p>
         <span class="inline-btn">
-            <a class="btn btn-primary btn-md" href="Cedric_Cooper_Infographic_Resume.pdf" role="button">Resume</a>
+            <a class="btn btn-primary btn-md" href="CedricCooper_Resume.pdf" role="button">Resume</a>
             <a class="btn btn-primary btn-md" href="#contact" role="button">Contact</a>
         </span>
     </div>
