added form action/method

--- a/index.html
+++ b/index.html
@@ -126,26 +126,26 @@
        <article>
         <div>
             <h1 class="main-heading">Contact</h1>
-            <form action="" class="container">
+            <form action="https://formspree.io/f/xjvjdkve" method="POST" class="container">
                 <br>
                 <div class="form-group">
                     <label for="firstname">First name:</label>
-                    <input type="text" class="form-control" id="firstname" placeholder="First Name">
+                    <input type="text" class="form-control" id="firstname" name="firstname" placeholder="First Name">
                 </div>
                 <br>
                 <div class="form-group">
                     <label for="lastname">Last name:</label>
-                    <input type="text" class="form-control" id="lastname" placeholder="Last Name">
+                    <input type="text" class="form-control" id="lastname" name="lastname" placeholder="Last Name">
                 </div>
                 <br>
                 <div class="form-group">
                     <label for="email">Email address:</label>
-                    <input type="email" class="form-control" id="email" placeholder="Email Address">
+                    <input type="email" class="form-control" id="email" name="_replyto" placeholder="Email Address">
                 </div>
                 <br>
                 <div class="form-group">
                     <label for="textarea">Write a message:</label>
-                    <textarea class="form-control" id="message" rows="3"></textarea>
+                    <textarea class="form-control" id="message" name="message" rows="3"></textarea>
                 </div>
                 <br>
                 <button type="submit" class="btn btn-primary btn-md btn-spacing">Send</button>
