updating index with changes

--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
     <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Stencil+Display&family=Roboto&display=swap" rel="stylesheet">
     
     <!--Bootstrap-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    
-    <!--Font library-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+	
+	<!--Font library-->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <!--My CSS-->
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+	<!--My CSS-->
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 
-    <!--jQuery, then JS-->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+	<!--jQuery, then JS-->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
-    <!--My JS-->
-    <script type="text/javascript" src="js/script.js"></script>
+	<!--My JS-->
+	<script type="text/javascript" src="js/script.js"></script>
 
 </head>
 <body>
@@ -42,7 +42,7 @@
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
                   <!--insert site into home href-->
-                <a class="nav-link active" aria-current="page" href="https://cjcmoney18.github.io/portfolio/">Home</a>
+                <a class="nav-link active" aria-current="page" href="https://cjcmoney18.github.io/Cooper/">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#about">About</a>
@@ -64,11 +64,11 @@
     <!--intro heading-->
    <header>
     <div class="jumbotron mooning-bg">
-        <img src="img/ProfPic.jpg" alt="Cedric Cooper Profile Img" class="img-border">
+        <img src="img/JobPicc.jpg" alt="Cedric Cooper Profile Img" class="img-border">
         <h1 class="display-4">Hi, my name is Cedric Cooper</h1>
         <p class="lead">Junior Game Developer</p>
         <span class="inline-btn">
-            <a class="btn btn-primary btn-md" href="CedricCooper_Resume.pdf" role="button">Resume</a>
+            <a class="btn btn-primary btn-md" href="Cedric_Cooper_Infographic_Resume.pdf" role="button">Resume</a>
             <a class="btn btn-primary btn-md" href="#contact" role="button">Contact</a>
         </span>
     </div>
@@ -82,7 +82,7 @@
               I&#39;m a young Game Designer who was born in Chicago, raised in Las Vegas with 2+ years
               experience with Unity and C#. With my Bachelor&#39;s degree in Game Design from Full Sail
               Univ. my goal is to create amazing video games that are able to bring joy to many
-              people and smiles aroung the world. No matter the genre of the game, whether it&#39;s
+              people and smiles around the world. No matter the genre of the game, whether it&#39;s
               action-adventure, fighters/sports, RTS, etc. as long as I can contribute to the project
               it will make me happy and hopefully make others happy!
             </p>
@@ -90,10 +90,9 @@
         </div>
     </article>
 </section>
-
+<!--Project 1-->
 <!--Stackoverflow solution-->
 <section id="projects">
-    <h1 class="main-heading">Projects</h1>
   <article class="d-flex justify-content-center">
         <div class="flip">
           <div class="card bg-dark text-white text-center" style="width: 600px;"> 
@@ -103,49 +102,63 @@
             <div class="back card-img-overlay"> 
               <div class="text-center"> 
                   <h5 class="card-title">Gateway Solutions</h5>
-                  <p class="card-text">
-                    This project is a reproduction of <em>Portal</em>.
-                    <br>
-                    A 1st person puzzle-platform video game.
-                  <!--<p class="card-text"><small class="text-muted">Coming soon</small></p>-->
+                  <p class="card-text">This project is a reproduction of <em>Portal</em>, a 1st person puzzle-platform video game.</p>
+                  <a href="https://cjcmoney18.itch.io/gateway-solution">Gateway Solutions Link</a>
+                  <!--<p class="card-text"><small class="text-muted">Released: Sept. 6, 2021</small></p>-->
               </div>
             </div>
-          </div>     
+          </div>	 
         </div>
     </article>
   </section>
-        <br>
-        <div class="text-center">
-            <a href="https://cjcmoney18.itch.io/gateway-solution"  target="_blank">
-                <button class="btn btn-primary btn-md btn-spacing">Play</button>
-            </a>
+<br>
+
+  <!--Project 2-->
+<section id="projects">
+  <article class="d-flex justify-content-center">
+        <div class="flip">
+          <div class="card bg-dark text-white text-center" style="width: 600px;"> 
+            <div class="face front">
+                <img src="img/quickmatch_dealer.png" class="card-img">
+            </div> 
+            <div class="back card-img-overlay"> 
+              <div class="text-center"> 
+                  <h5 class="card-title">Quick Match</h5>
+                  <p class="card-text">This project is a timed, card matching game with three levels. Everything created by me except for the cover image and music.</p>
+                  <a href="https://cjcmoney18.itch.io/quick-match">Quick Match Link</a>
+                  <!--<p class="card-text"><small class="text-muted">Released: Jan. 9, 2022</small></p>-->
+              </div>
+            </div>
+          </div>	 
         </div>
+    </article>
+  </section>
 
     <!--Contact: Content section 3-->
    <section id="contact">
        <article>
         <div>
             <h1 class="main-heading">Contact</h1>
-            <form action="https://formspree.io/f/xjvjdkve" method="POST" class="container">
+            <form action="" class="container">
                 <br>
                 <div class="form-group">
                     <label for="firstname">First name:</label>
-                    <input type="text" class="form-control" id="firstname" name="firstname" placeholder="First Name">
+                    <input type="text" class="form-control" id="firstname" placeholder="First Name">
                 </div>
                 <br>
                 <div class="form-group">
                     <label for="lastname">Last name:</label>
-                    <input type="text" class="form-control" id="lastname" name="lastname" placeholder="Last Name">
+                    <input type="text" class="form-control" id="lastname" placeholder="Last Name">
                 </div>
                 <br>
                 <div class="form-group">
                     <label for="email">Email address:</label>
-                    <input type="email" class="form-control" id="email" name="_replyto" placeholder="Email Address">
+                    <input type="email" class="form-control" id="email" placeholder="Email Address">
                 </div>
                 <br>
                 <div class="form-group">
                     <label for="textarea">Write a message:</label>
-                    <textarea class="form-control" id="message" name="message" rows="3"></textarea>
+                    <textarea class="form-control" id="message" rows="3"></textarea>
                 </div>
                 <br>
                 <button type="submit" class="btn btn-primary btn-md btn-spacing">Send</button>
