updated to add info to projects

--- a/index.html
+++ b/index.html
@@ -79,12 +79,8 @@
         <div class="text-center">
             <h1 class="main-heading">About</h1>
             <p class="p-about container">
-              I&#39;m a young Game Designer who was born in Chicago, raised in Las Vegas with 2+ years
-              experience with Unity and C#. With my Bachelor&#39;s degree in Game Design from Full Sail
-              Univ. my goal is to create amazing video games that are able to bring joy to many
-              people and smiles around the world. No matter the genre of the game, whether it&#39;s
-              action-adventure, fighters/sports, RTS, etc. as long as I can contribute to the project
-              it will make me happy and hopefully make others happy!
+              I&#39;m a Game Designer born in Chicago, raised in Las Vegas with 3 years
+              experience with coding in Unity and C#. With my Bachelor&#39;s degree in Game Design from Full Sail University, my dream is to one day create a game that is able to bring joy to many people.
             </p>
 
         </div>
@@ -102,9 +98,20 @@
             <div class="back card-img-overlay"> 
               <div class="text-center"> 
                   <h5 class="card-title">Gateway Solutions</h5>
-                  <p class="card-text">This project is a reproduction of <em>Portal</em>, a 1st person puzzle-platform video game.</p>
+                  <p class="card-text">
+                    <br>
+                    This project is a reproduction of <em>Portal</em>, a 1st person puzzle-platform video game.
+
+                    <ul style="text-align: left;">
+                      <li>Duration: 4 months</li>
+                      <li>Role: Lead Designer</li>
+                      <li>Responsibility: Tasked with the player interact, also created several levels (2, 4, 8, 12) to teach the player some features. Designed the portal feature along with the gravity effect of them.</li>
+                    </ul>
+
+                  </p>
                   <a href="https://cjcmoney18.itch.io/gateway-solution">Gateway Solutions Link</a>
-                  <!--<p class="card-text"><small class="text-muted">Released: Sept. 6, 2021</small></p>-->
+                  <br>
+                  <p class="card-text"><small class="text-muted">Released: Sept. 6, 2021</small></p>
               </div>
             </div>
           </div>	 
@@ -124,16 +131,28 @@
             <div class="back card-img-overlay"> 
               <div class="text-center"> 
                   <h5 class="card-title">Quick Match</h5>
-                  <p class="card-text">This project is a timed, card matching game with three levels. Everything created by me except for the cover image and music.</p>
+                  <p class="card-text">
+                    <br>
+                  This project is a timed, card matching game with three levels. 
+
+                    <ul style="text-align: left;">
+                      <li>Duration: 2 months</li>
+                      <li>Role: Lead Designer</li>
+                      <li>Responsibility: Sole designer for this project, designed everything besides the music and cover art.</li>
+                    </ul>
+
+                  </p>
+
                   <a href="https://cjcmoney18.itch.io/quick-match">Quick Match Link</a>
-                  <!--<p class="card-text"><small class="text-muted">Released: Jan. 9, 2022</small></p>-->
+                  <br>
+                  <p class="card-text"><small class="text-muted">Released: Jan. 9, 2022</small></p>
               </div>
             </div>
           </div>	 
         </div>
     </article>
   </section>
-
+<br>
     <!--Contact: Content section 3-->
    <section id="contact">
        <article>
