fixing media queries for cards

--- a/index.html
+++ b/index.html
@@ -87,12 +87,12 @@
   <h1 class="main-heading mb-5 mt-3">Projects</h1>
   <article class="d-flex justify-content-center">
         <div class="flip">
-          <div class="card bg-dark text-white text-center" style="width: 600px;"> 
+          <div class="card bg-dark text-white text-center" style="width: 40vw; height: 100%;"> 
             <div class="face front">
                 <img src="img/portal.png" class="card-img">
             </div> 
             <div class="back card-img-overlay"> 
-              <div class="text-center"> 
+              <div class="text-center font-scale"> 
                   <h5 class="card-title">Gateway Solutions</h5>
                   <p class="card-text">
                     <br>
@@ -105,7 +105,7 @@
                     </ul>
 
                   </p>
-                  <a href="https://cjcmoney18.itch.io/gateway-solution">Gateway Solutions Link</a>
+                  <a href="https://cjcmoney18.itch.io/gateway-solution" class="font-scale">Gateway Solutions Link</a>
                   <br>
                   <p class="card-text"><small class="text-muted">Released: Sept. 6, 2021</small></p>
               </div>
@@ -120,12 +120,12 @@
 <section id="projects">
   <article class="d-flex justify-content-center">
         <div class="flip">
-          <div class="card bg-dark text-white text-center" style="width: 600px;"> 
+          <div class="card bg-dark text-white text-center" style="width: 40vw; height: 100%;"> 
             <div class="face front">
                 <img src="img/quickmatch_dealer.png" class="card-img">
             </div> 
             <div class="back card-img-overlay"> 
-              <div class="text-center"> 
+              <div class="text-center font-scale"> 
                   <h5 class="card-title">Quick Match</h5>
                   <p class="card-text">
                     <br>
@@ -139,7 +139,7 @@
 
                   </p>
 
-                  <a href="https://cjcmoney18.itch.io/quick-match">Quick Match Link</a>
+                  <a href="https://cjcmoney18.itch.io/quick-match" class="font-scale">Quick Match Link</a>
                   <br>
                   <p class="card-text"><small class="text-muted">Released: Jan. 9, 2022</small></p>
               </div>
