added lottie animation cdn

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
 	<!--My JS-->
 	<script type="text/javascript" src="js/script.js"></script>
 
+  <!-- Lottie ANimations -->
+  <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+
 </head>
 <body>
     <!--navigation bar-->
