--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       <a href="Cedric_Cooper_Infographic_Resume.pdf" class="btn btn-primary" download>Download Resume</a>
     </div>
     <div class="col-lg-6 col-12">
-      <lottie-player src="/animations/Animation - 1731369224424.json" background="transparent" speed="1" style="width: 100%; height: 100%;" loop autoplay></lottie-player>
+      <lottie-player src="./animations/Animation - 1731369224424.json" background="transparent" speed="1" style="width: 100%; height: 100%;" loop autoplay></lottie-player>
     </div>
   </div>
 
@@ -93,7 +93,7 @@
     <div class="row row-cols-1 row-cols-lg-2 justify-content-center align-items-center flex-column flex-lg-row">
       <div class="col-lg-6 col-12 d-flex justify-content-center align-items-center align-self-end mb-3 mb-lg-0">
         <div class="card d-flex flex-column h-100">
-          <img class="card-img-top p-1" src="/img/quickmatch_dealer.png" alt="Card image cap">
+          <img class="card-img-top p-1" src="./img/quickmatch_dealer.png" alt="Card image cap">
           <div class="card-body">
             <ul>
               <li>Unity</li>
@@ -109,7 +109,7 @@
 
       <div class="col-lg-6 col-12 d-flex justify-content-center align-items-center mb-lg-0">
         <div class="card d-flex flex-column h-100">
-          <img class="card-img-top p-1" src="/img/portal.png" alt="Card image cap">
+          <img class="card-img-top p-1" src="./img/portal.png" alt="Card image cap">
           <div class="card-body">
             <ul>
               <li>Unity</li>
@@ -134,7 +134,7 @@
       <div class="col-lg-6 col-12">
         <h2 class="contact-title pb-4">Contact</h2>
         <div class="d-flex justify-content-center align-items-center">
-          <img src="/img/undraw_contact.png" alt="Credit: Undraw Illustrations" class="img-fluid" style="max-height: 350px; width: auto;">
+          <img src="./img/undraw_contact.png" alt="Credit: Undraw Illustrations" class="img-fluid" style="max-height: 350px; width: auto;">
         </div>
       </div>
       <div class="col-lg-6 col-12">
