--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
 
   <!-- Lottie ANimations -->
   <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-
+  
+  <!-- -------------- AOS Library ----------- -->
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
     <!--navigation bar-->
@@ -92,7 +94,7 @@
 
     <div class="row row-cols-1 row-cols-lg-2 justify-content-center align-items-center flex-column flex-lg-row">
       <div class="col-lg-6 col-12 d-flex justify-content-center align-items-center align-self-end mb-3 mb-lg-0">
-        <div class="card d-flex flex-column h-100">
+        <div class="card d-flex flex-column h-100" data-aos="flip-left" data-aos-duration="1500">
           <img class="card-img-top p-1" src="./img/quickmatch_dealer.png" alt="Card image cap">
           <div class="card-body">
             <ul>
@@ -108,7 +110,7 @@
       </div>
 
       <div class="col-lg-6 col-12 d-flex justify-content-center align-items-center mb-lg-0">
-        <div class="card d-flex flex-column h-100">
+        <div class="card d-flex flex-column h-100" data-aos="flip-left" data-aos-duration="3000">
           <img class="card-img-top p-1" src="./img/portal.png" alt="Card image cap">
           <div class="card-body">
             <ul>
@@ -204,5 +206,11 @@
 
 <!--Javascript BootStrap script-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+<!-- ----------- AOS Library ---------------- -->
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+AOS.init();
+</script>
 </body>
 </html>
