Update index.html target blank

--- a/index.html
+++ b/index.html
@@ -195,10 +195,10 @@
       </ul>
     </div>
     <div class="col d-flex justify-content-center align-items-center">
-      <a href="https://www.linkedin.com/in/cedric-gamedev/" class="text-decoration-none">
+      <a href="https://www.linkedin.com/in/cedric-gamedev/" class="text-decoration-none" target="_blank">
         <i class="fab fa-linkedin fa-xl" style="color:#fff;  font-size: 20px;"></i>
       </a>
-        <a href="https://www.github.com/CJCMONEY18/">
+        <a href="https://www.github.com/CJCMONEY18/" target="_blank">
           <i class="fab fa-github-square fa-xl" style="color:#fff; font-size: 20px; margin-left: 20px"></i>
         </a>
     </div>
