Update index.html grammar

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
               <li>VS Code</li>
             </ul>
             <h5 class="card-title">QUICK MATCH</h5>
-            <p class="card-text">This project is a timed, card matching game with three levels. This Sole designer for this project, designed everything besides the music and cover art.</p>
+            <p class="card-text">This project is a timed, card matching game with three levels. Sole designer for this project, designed everything besides the music and cover art.</p>
             <a href="https://cjcmoney18.itch.io/quick-match" class="btn btn-primary mt-auto" target="_blank">Link to project</a>
           </div>
         </div>
