Update index.html role dates

--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
               <li>VS Code</li>
             </ul>
             <h5 class="card-title">QUICK MATCH</h5>
+		<p><em>Lead Designer | Jan. 2022</em></p>
             <p class="card-text">This project is a timed, card matching game with three levels. Sole designer for this project, designed everything besides the music and cover art.</p>
             <a href="https://cjcmoney18.itch.io/quick-match" class="btn btn-primary mt-auto" target="_blank">Link to project</a>
           </div>
@@ -119,6 +120,7 @@
               <li>VS Code</li>
             </ul>
             <h5 class="card-title">Gateway Solutions</h5>
+		  <p><em>Lead Designer | Sept. 2021</em></p>
             <p class="card-text">This project is a reproduction of Portal, a 1st person puzzle-platform video game. Tasked with the player interact, also created several levels (2, 4, 8, 12) to teach the player some features. Designed the portal feature along with the gravity effect of them.</p>
             <a href="https://cjcmoney18.itch.io/gateway-solution" class="btn btn-primary mt-auto" target="_blank">Link to project</a>
           </div>
