--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
 
 
-<section class="mt-5">
+<section class="mt-5 mb-5 pt-5 pb-5">
   <div class="container row justify-content-between align-items-center flex-lg-row mx-auto">
     <div class="col-lg-6 col-12">
       <h1 class="hero-title">hi, i'm</h1>
@@ -135,13 +135,13 @@
 <section id="contact" class="mt-5 pb-3 mb-5">
   <div class="container">
     <div class="row justify-content-center align-items-center flex-column flex-lg-row">
-      <div class="col-lg-6 col-12">
+      <div class="col-lg-6 col-12" data-aos="fade-left" data-aos-duration="1500">
         <h2 class="contact-title pb-4">Contact</h2>
         <div class="d-flex justify-content-center align-items-center">
           <img src="./img/undraw_contact.png" alt="Credit: Undraw Illustrations" class="img-fluid" style="max-height: 350px; width: auto;">
         </div>
       </div>
-      <div class="col-lg-6 col-12">
+      <div class="col-lg-6 col-12" data-aos="fade-right" data-aos-duration="1500">
         <form class="container" action="https://formspree.io/f/xaykekqn" method="POST">
           <div class="pb-1">
             <label for="name" class="form-label">
